--- a/index.html
+++ b/index.html
@@ -240,16 +240,16 @@
       </div>
       <div data-animation="slide" data-duration="500" data-infinite="1" class="testimonials-slider w-slider">
         <div class="w-slider-mask">
-          <div class="testimonial-slide w-slide"><img src="images/jl.png" width="250" alt="">
+          <div class="testimonial-slide w-slide"><img src="images/jl.png" width="250" style="padding: 5px; margin-top: 8em;" alt="">
             <p class="testimonial"></p>
           </div>
-          <div class="testimonial-slide w-slide"><img src="images/lex.png" width="250" alt="">
+          <div class="testimonial-slide w-slide"><img src="images/lex.png" width="250" style="padding: 5px; margin-top: 8em;" alt="">
             <p class="testimonial"> </p>
           </div>
-          <div class="testimonial-slide w-slide"><img src="images/proxiblack.png" width="250" alt="">
+          <div class="testimonial-slide w-slide"><img src="images/proxiblack.png" width="250" style="padding: 5px; margin-top: 8em;" alt="">
             <p class="testimonial"> </p>
           </div>
-          <div class="testimonial-slide w-slide"><img src="images/laser.PNG" width="250" alt="">
+          <div class="testimonial-slide w-slide"><img src="images/laser.PNG" width="250" style="padding: 5px; margin-top: 8em;" alt="">
             <p class="testimonial"></p>
           </div>
         </div>
